--- a/app/server/views/admin/modifyPassword.html
+++ b/app/server/views/admin/modifyPassword.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="/stylesheets/Ace_template_css/font-awesome.min.css"/>
 
     <!-- page specific plugin styles -->
+    <link rel="stylesheet" href="/stylesheets/Ace_template_css/jquery-ui.min.css"/>
+    <link rel="stylesheet" href="/stylesheets/Ace_template_css/bootstrap-datepicker3.min.css"/>
+    <link rel="stylesheet" href="/stylesheets/Ace_template_css/ui.jqgrid.min.css"/>
 
     <!-- text fonts -->
     <link rel="stylesheet" href="/stylesheets/Ace_template_css/fonts.googleapis.com.css"/>
@@ -102,7 +105,7 @@
                 <b class="arrow"></b>
             </li>
 
-            <li class="hover">
+            <li class="active open hover">
                 <a href="/admin/user">
                     <i class="menu-icon fa fa-users"></i>
                     <span class="menu-text"> 用户管理 </span>
@@ -120,7 +123,7 @@
                 <b class="arrow"></b>
             </li>
 
-            <li class="active open hover">
+            <li class="hover">
                 <a href="/admin/log/login/">
                     <i class="menu-icon fa fa-file-text-o"></i>
                     <span class="menu-text"> 操作日志 </span>
@@ -137,19 +140,13 @@
                 <% include ../includes/ace-settings-container.html %>
 
                 <div class="page-header">
-                    <h1>站点配置 </h1>
+                    <h1>用户管理 </h1>
                 </div><!-- /.page-header -->
 
                 <div class="row">
                     <div class="col-xs-12">
                         <!-- PAGE CONTENT BEGINS -->
                         <div class="invisible">
-                            <button data-target="#sidebar2" type="button" class="pull-left menu-toggler navbar-toggle">
-                                <span class="sr-only">Toggle sidebar</span>
-
-                                <i class="ace-icon fa fa-dashboard white bigger-125"></i>
-                            </button>
-
                             <div id="sidebar2" class="sidebar responsive menu-min ace-save-state">
                                 <ul class="nav nav-list">
 
@@ -157,7 +154,7 @@
                                         <a href="#" class="dropdown-toggle">
                                             <i class="menu-icon fa fa-users"></i>
                                                 <span class="menu-text">
-                                                    日志管理
+                                                    用户管理
                                                 </span>
 
                                             <b class="arrow fa fa-angle-down"></b>
@@ -167,17 +164,17 @@
 
                                         <ul class="submenu nav-show" style="display: block;">
                                             <li class="">
-                                                <a href="/admin/log/login">
+                                                <a href="/admin/user">
                                                     <i class="menu-icon fa fa-caret-right"></i>
-                                                    登陆日志列表
+                                                    用户列表
                                                 </a>
 
                                                 <b class="arrow"></b>
                                             </li>
                                             <li class="">
-                                                <a href="/admin/log/operation">
+                                                <a href="/admin/user/addUser">
                                                     <i class="menu-icon fa fa-caret-right"></i>
-                                                    操作日志列表
+                                                    添加用户
                                                 </a>
 
                                                 <b class="arrow"></b>
@@ -195,25 +192,99 @@
                                 </div>
                             </div><!-- .sidebar -->
                         </div>
-
-                        <div class="hidden-sm hidden-xs">
-                            <button type="button" class="sidebar-collapse btn btn-white btn-primary"
-                                    data-target="#sidebar">
-                                <i id="sidebar4-toggle-icon" class="ace-icon fa fa-angle-double-up ace-save-state"
-                                   data-icon1="ace-icon fa fa-angle-double-up"
-                                   data-icon2="ace-icon fa fa-angle-double-down"></i>
-                                折叠/展开菜单栏
-                            </button>
-                        </div>
-
                         <!-- PAGE CONTENT ENDS -->
                     </div><!-- /.col -->
                 </div><!-- /.row -->
+
+                <div class="row">
+                    <div class="col-xs-12">
+
+                        <div class="widget-box">
+                            <div class="widget-header">
+                                <h4 class="widget-title">修改密码</h4>
+                            </div>
+
+                            <div class="widget-body" style="display: block;">
+                                <div class="widget-main">
+                                    <form class="form-horizontal" role="form" id="updatePassword">
+                                        <div class="form-group">
+                                            <label class="col-sm-3 control-label no-padding-right" for="ipt_email">
+                                                用户帐号 </label>
+
+                                            <div class="col-sm-9">
+                                                <input type="email" id="ipt_email" name="email"
+                                                       placeholder="例如： example@domain.com"
+                                                       class="col-xs-12 col-sm-5" value="<%= accountInfo.user %>" readonly>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label class="col-sm-3 control-label no-padding-right" for="password">
+                                                输入新密码 </label>
+
+                                            <div class="col-sm-9">
+                                                <input type="password" id="password" name="password" placeholder="password"
+                                                       class="col-xs-12 col-sm-5" value="">
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label class="col-sm-3 control-label no-padding-right" for="pass">
+                                                确认密码 </label>
+
+                                            <div class="col-sm-9">
+                                                <input type="password" id="pass" name="pass" placeholder="password"
+                                                       class="col-xs-12 col-sm-5" value="">
+                                            </div>
+                                        </div>
+
+                                        <div class="space-4"></div>
+
+
+                                        <div class="clearfix form-actions">
+                                            <div class="col-md-offset-3 col-md-9">
+                                                <button class="btn btn-sm btn-success" type="submit">
+                                                    <i class="ace-icon fa fa-check bigger-110"></i>
+                                                    添加
+                                                </button>
+
+                                                &nbsp; &nbsp; &nbsp;
+                                                <button class="btn btn-sm" type="reset" id="editCancel">
+                                                    <i class="ace-icon fa fa-undo bigger-110"></i>
+                                                    取消
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
             </div><!-- /.page-content -->
         </div>
     </div><!-- /.main-content -->
 
     <% include ../includes/footer.html %>
+
+    <!-- 注册提示信息模态框 -->
+    <div class="modal fade" id="formInfoBox" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">修改密码</h4>
+                </div>
+                <div class="modal-body"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">确定</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <a href="#" id="btn-scroll-up" class="btn-scroll-up btn btn-sm btn-inverse">
         <i class="ace-icon fa fa-angle-double-up icon-only bigger-110"></i>
@@ -236,6 +307,8 @@
 <script src="/javascripts/Ace_template_js/bootstrap.min.js"></script>
 
 <!-- page specific plugin scripts -->
+<script src="/bower_components/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="/bower_components/jquery-validation/dist/localization/messages_zh.js"></script>
 
 <!-- ace scripts -->
 <script src="/javascripts/Ace_template_js/ace-elements.min.js"></script>
@@ -263,6 +336,8 @@
         $('#sidebar2[data-sidebar-hover=true]').ace_sidebar_hover('reset');
         $('#sidebar2[data-sidebar-scroll=true]').ace_sidebar_scroll('reset', true);
     })
+
 </script>
+<script src="/javascripts/customs/pages/admin/modifyPassword.js"></script>
 </body>
 </html>
