--- a/app/server/views/application/index.html
+++ b/app/server/views/application/index.html
@@ -51,7 +51,7 @@
 </head>
 
 <body class="no-skin">
-<% include ./includes/topNav.html %>
+<% include ../includes/topNav.html %>
 
 <div class="main-container ace-save-state" id="main-container">
     <script type="text/javascript">
@@ -61,15 +61,15 @@
         }
     </script>
 
-    <% include ./includes/sideBar.html %>
+    <% include ../includes/sideBar.html %>
 
     <div class="main-content">
         <div class="main-content-inner">
 
             <div class="page-content">
-                <% include ./includes/ace-settings-container.html %>
+                <% include ../includes/ace-settings-container.html %>
 
-                <% include ./includes/audioPlayerBox.html %>
+                <% include ../includes/audioPlayerBox.html %>
 
                 <div class="page-header">
                     <h1>
@@ -259,7 +259,7 @@
         </div>
     </div><!-- /.main-content -->
 
-    <% include ./includes/footer.html %>
+    <% include ../includes/footer.html %>
 
     <a href="#" id="btn-scroll-up" class="btn-scroll-up btn btn-sm btn-inverse">
         <i class="ace-icon fa fa-angle-double-up icon-only bigger-110"></i>
