--- a/app/server/views/admin/addRole.html
+++ b/app/server/views/admin/addRole.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta charset="utf-8"/>
-    <title>Two Menu Style - Ace Admin</title>
+    <title><%= title %></title>
 
     <meta name="description" content=""/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
@@ -129,7 +129,7 @@
             <li class="hover">
                 <a href="/admin/log/login/">
                     <i class="menu-icon fa fa-file-text-o"></i>
-                    <span class="menu-text"> 操作日志 </span>
+                    <span class="menu-text"> 日志管理 </span>
                 </a>
                 <b class="arrow"></b>
             </li>
@@ -175,7 +175,7 @@
                                                 <b class="arrow"></b>
                                             </li>
                                             <li class="">
-                                                <a href="/admin/user/addRole">
+                                                <a href="/admin/role/addRole">
                                                     <i class="menu-icon fa fa-caret-right"></i>
                                                     添加角色
                                                 </a>
@@ -202,16 +202,16 @@
                 <div class="row">
                     <div class="col-xs-12">
 
-                        <form class="form-horizontal" role="form" id="signupForm">
+                        <form class="form-horizontal" role="form" id="addRoleForm">
 
                             <h3 class="lighter block orange">基本信息</h3>
 
                             <div class="form-group">
-                                <label class="col-sm-3 control-label no-padding-right" for="ipt_name">
+                                <label class="col-sm-3 control-label no-padding-right" for="name">
                                     角色名称 </label>
 
                                 <div class="col-sm-9">
-                                    <input type="email" id="ipt_name" name="name"
+                                    <input type="text" id="name" name="name"
                                            placeholder="请输入角色名称"
                                            class="col-xs-12 col-sm-5">
                                 </div>
@@ -220,10 +220,10 @@
                             <div class="form-group">
                                 <label class="col-sm-3 control-label no-padding-right"
                                        for="ipt_description">
-                                    描述 </label>
+                                    角色描述 </label>
 
                                 <div class="col-sm-9">
-                                    <textarea id="ipt_description" rows="2" class="col-xs-12 col-sm-5" maxlength="100"
+                                    <textarea id="ipt_description" rows="2" class="col-xs-12 col-sm-5" name="description" maxlength="100"
                                               placeholder="描述..."></textarea>
                                 </div>
                             </div>
@@ -233,20 +233,13 @@
                             <h3 class="lighter block orange">选择权限</h3>
 
                             <div class="form-group">
-                                <label class="col-sm-3 control-label no-padding-top" for="duallist"> 设置权限 </label>
+                                <label class="col-sm-3 control-label no-padding-top" for="duallist"> 角色权限 </label>
 
                                 <div class="col-sm-8">
-                                    <select multiple="multiple" size="10" name="duallistbox_roles[]" id="duallist">
-                                        <option value="option1">Option 1</option>
-                                        <option value="option2">Option 2</option>
-                                        <option value="option3" selected="selected">Option 3</option>
-                                        <option value="option4">Option 4</option>
-                                        <option value="option5">Option 5</option>
-                                        <option value="option6" selected="selected">Option 6</option>
-                                        <option value="option7">Option 7</option>
-                                        <option value="option8">Option 8</option>
-                                        <option value="option9">Option 9</option>
-                                        <option value="option0">Option 10</option>
+                                    <select multiple="multiple" size="10" name="duallistbox_permissions" id="duallist">
+                                        <% AllAccessAndResource.forEach(function(a){ %>
+                                        <option value="<%= a._id %>">[<%=a.belongTo%>] <%= a.name %></option>
+                                        <% }) %>
                                     </select>
 
                                     <div class="hr hr-16 hr-dotted"></div>
@@ -268,7 +261,6 @@
                                 </div>
                             </div>
                         </form>
-
                     </div>
                 </div>
 
@@ -355,21 +347,23 @@
 
 <script>
     jQuery(function ($) {
-        var demo1 = $('select[name="duallistbox_roles[]"]').bootstrapDualListbox(
+        var demo1 = $('select[name="duallistbox_permissions"]').bootstrapDualListbox(
                 {
                     filterPlaceHolder: '搜索..',
                     filterTextClear: '显示全部',
                     infoText: '共 {0}',
                     infoTextFiltered: '<span class="label label-purple label-lg">搜索条件启用</span>',
-                    nonSelectedListLabel: '允许配置的权限：',
-                    selectedListLabel: '账号已有的权限：',
-                    infoTextEmpty: '列表已空...'
+                    nonSelectedListLabel: '系统中所有权限：',
+                    selectedListLabel: '账号已设置权限：',
+                    infoTextEmpty: '列表已空...',
+                    moveAllLabel: "全部添加",
+                    removeAllLabel: "全部移除"
                 }
         );
         var container1 = demo1.bootstrapDualListbox('getContainer');
         container1.find('.btn').addClass('btn-white btn-info btn-bold');
     });
 </script>
-
+<script src="/javascripts/customs/pages/admin/addRole.js"></script>
 </body>
 </html>
