--- a/app/server/views/includes/admin-topNav.html
+++ b/app/server/views/includes/admin-topNav.html
@@ -1,42 +1,37 @@
-<div id="navbar" class="navbar navbar-default    navbar-collapse       h-navbar ace-save-state">
+<!-- template topNav -->
+<div id="navbar" class="navbar navbar-default ace-save-state">
     <div class="navbar-container ace-save-state" id="navbar-container">
+        <button type="button" class="navbar-toggle menu-toggler pull-left" id="menu-toggler" data-target="#sidebar">
+            <span class="sr-only">Toggle sidebar</span>
+
+            <span class="icon-bar"></span>
+
+            <span class="icon-bar"></span>
+
+            <span class="icon-bar"></span>
+        </button>
+
         <div class="navbar-header pull-left">
-            <a href="index.html" class="navbar-brand">
+            <a href="/" class="navbar-brand">
                 <small>
                     <i class="fa fa-cloud"></i>
                     山西-吉兆 FM监听系统
                 </small>
             </a>
-
-            <button class="pull-right navbar-toggle navbar-toggle-img collapsed" type="button" data-toggle="collapse"
-                    data-target=".navbar-buttons,.navbar-menu">
-                <span class="sr-only">Toggle user menu</span>
-
-                <img src="/images/Ace_template_images/avatars/user.jpg" alt="Jason's Photo"/>
-            </button>
-
-            <button class="pull-right navbar-toggle collapsed" type="button" data-toggle="collapse"
-                    data-target="#sidebar">
-                <span class="sr-only">Toggle sidebar</span>
-
-                <span class="icon-bar"></span>
-
-                <span class="icon-bar"></span>
-
-                <span class="icon-bar"></span>
-            </button>
         </div>
 
-        <div class="navbar-buttons navbar-header pull-right  collapse navbar-collapse" role="navigation">
+        <div class="navbar-buttons navbar-header pull-right" role="navigation">
+
+            <% if (udata) { %>
             <ul class="nav ace-nav">
 
-                <li class="light-blue dropdown-modal user-min">
+                <li class="light-blue dropdown-modal">
                     <a data-toggle="dropdown" href="#" class="dropdown-toggle">
                         <img class="nav-user-photo" src="/images/Ace_template_images/avatars/user.jpg"
                              alt="Jason's Photo"/>
 								<span class="user-info">
-									<small>Welcome,</small>
-									Jason
+									<small>你好,</small>
+									<%= udata.name %>
 								</span>
 
                         <i class="ace-icon fa fa-caret-down"></i>
@@ -46,28 +41,29 @@
                         <li>
                             <a href="#">
                                 <i class="ace-icon fa fa-cog"></i>
-                                Settings
+                                设置
                             </a>
                         </li>
 
                         <li>
-                            <a href="profile.html">
+                            <a href="">
                                 <i class="ace-icon fa fa-user"></i>
-                                Profile
+                                个人信息
                             </a>
                         </li>
 
                         <li class="divider"></li>
 
                         <li>
-                            <a href="#">
+                            <a href="/logout">
                                 <i class="ace-icon fa fa-power-off"></i>
-                                Logout
+                                注销
                             </a>
                         </li>
                     </ul>
                 </li>
             </ul>
+            <% } %>
         </div>
-    </div><!-- /.navbar-container -->
+    </div><!-- /template topNav -->
 </div>
