--- a/app/server/views/includes/blank.html
+++ b/app/server/views/includes/blank.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta charset="utf-8" />
-		<title>Blank Page - Ace Admin</title>
+		<title><%= title %></title>
 
 		<meta name="description" content="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
@@ -88,7 +88,7 @@
 
 				<ul class="nav nav-list">
 					<li class="">
-						<a href="index.html">
+						<a href="../application/index.html">
 							<i class="menu-icon fa fa-tachometer"></i>
 							<span class="menu-text"> Dashboard </span>
 						</a>
@@ -492,7 +492,7 @@
 							</li>
 
 							<li class="">
-								<a href="login.html">
+								<a href="../application/login.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Login &amp; Register
 								</a>
@@ -528,7 +528,7 @@
 							</li>
 
 							<li class="">
-								<a href="error-404.html">
+								<a href="../error-404.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Error 404
 								</a>
